# witch

./: .dockerignore  .gitignore  .sesskey  Dockerfile  ProcFile  application.py  create_db.py  create_db_script.py  docker-compose.yml  dockerfile  hello_world.py  pyproject.toml  readme.md  requirements.txt  waitch.py  witch.py
.elasticbeanstalk/: 01.config  config.yml
tests/: conftest.py  test_db.py  test_get_witches.py
waitch/: create_db.py  models.py
witch/: .sesskey  __init__.py  app.py  db.py  main.py  models.py  view.py
