virtualenvs.in-project = true

pythonpath="witch"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poetry]
name = "witch"
version = "0.1.0"
description = ""
authors = ["Rob Spaul"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
#fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
python-fasthtml = "^0.12.0"
#flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]
