[project]
name = "fasthtml-template"
version = "0.1.0"
description = "A \"Hello World\" template for FastHTML"
authors = [
    {name = "Bob Ambrose", email = "bambrose24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-fasthtml>=0.12.15",
    "sqlmodel>=0.0.22",
    "python-fasthtml>=0.12.0",
    "python-dotenv>=1.1.0",
    "psycopg2>=2.9.10",
]
pythonpath="witch"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # requires docstring for public modules
    "D104", # requires docstring for public packages
    "D401", # imperative mood
    "D211",
    "D213",
    "D203", # requires blank line before class docstring which clashes with formater
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = [
    "S101",  # use of assert (required for pytest)
    "D103",  # requiring docstring for unit tests
]

[tool.ruff.format]
quote-style = "double"  # Like Black, use double quotes for strings.
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.
docstring-code-format = true
